--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,9 @@ repositories {
 dependencies {
 	compile 'com.squareup.okhttp3:okhttp:3.11.0'
     compile 'org.apache.commons:commons-lang3:3.6'
-	implementation('org.springframework.boot:spring-boot-starter')
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
+
+    implementation('org.springframework.boot:spring-boot-starter')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
